# liorf

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  package.xml
GRID/: saved_grid_map.pgm  saved_grid_map.yaml
PCD/GlobalMap.pcd/: trajectory.pcd  transformations.pcd
config/: grid_map_generator.yaml  lio_sam_livox.yaml  lio_sam_livox_mid360.yaml  lio_sam_ouster.yaml  removert.yaml
include/: PGOManager.h  costmap.h  db_manager.h  loopclosure.h  mapDatabase.h  mapOptimization.h  point_types.h  tsdf_grid.cpp  tsdf_grid.hpp  utility.h
launch/: run_lio_sam_livox.launch.py  run_lio_sam_livox_mid360.launch.py
lib/: common_lib.cpp
liorf/: include
maps/: liorf_map.db  poses.txt  slam_map.db
maps/clouds/: cloud_000000.pcd  cloud_000001.pcd  cloud_000002.pcd  cloud_000003.pcd  cloud_000004.pcd  cloud_000005.pcd  cloud_000006.pcd  cloud_000007.pcd  cloud_000008.pcd  cloud_000009.pcd  cloud_000010.pcd  cloud_000011.pcd  cloud_000012.pcd  cloud_000013.pcd  cloud_000014.pcd  cloud_000015.pcd  cloud_000016.pcd  cloud_000017.pcd  cloud_000018.pcd  cloud_000019.pcd  cloud_000020.pcd  cloud_000021.pcd  cloud_000022.pcd  cloud_000023.pcd  cloud_000024.pcd  cloud_000025.pcd  cloud_000026.pcd  cloud_000027.pcd  cloud_000028.pcd  cloud_000029.pcd  cloud_000030.pcd  cloud_000031.pcd  cloud_000032.pcd  cloud_000033.pcd  cloud_000034.pcd  cloud_000035.pcd  cloud_000036.pcd  cloud_000037.pcd  cloud_000038.pcd  cloud_000039.pcd  (+4679 more)
rviz/: mapping.rviz
src/: PGOManager.cpp  costmap.cpp  db_manager.cpp  grid_map_generator.cpp  imageProjection.cpp  imuPreintegration.cpp  loopclosure.cpp  main.cpp  mapDatabase.cpp  mapOptimization.cpp  mapOptmization.cpp  removert_node.cpp  removert_node_remove_main.cpp  removert_node_removeupdate.cpp
src/liorf/src/: mapOptmization.cpp
